--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Teaching
-    url: '#posts'
+    url: '#teaching'
     weight: 20
   - name: Projects
     url: '#projects'
